# UnityRustExperiment

./: Assembly-CSharp-Editor.csproj  Assembly-CSharp-firstpass.csproj  Assembly-CSharp.csproj  RustExperiment.sln
Assets/: Bubble 1.mat  Bubble.mat  CallNativeCode.cs  CallNativeCode.unity  Experiments.cs  GenerateCode.cs  NextTests.cs  RustDll.cs
Assets/NextModule™/: NextModule.cs
Assets/Plugins/x86_64/: Wrapper.cs
Assets/Scenes/: SampleScene.unity
Assets/Scripts/: ArenaGameSinglePlayer.cs  CodeGeneration.cs  Experiments.cs  GameBackend.cs  InteropUtils.cs  LibraryCall.cs  Native.cs  RustDLL.cs
Assets/Scripts/Editor/: CodeGeneration.cs  (+2 more)
Plugin/: Cargo.toml  Interop.cs  Wrapper.cs  build.rs  build.sh  build_for_debug.py  build_for_debug.sh  build_for_release.sh  build_for_webgl_deploy.py  the plan  the plan 2
Plugin/bargame_builder/: Cargo.toml
Plugin/bargame_demos/: Cargo.toml
Plugin/bargame_demos/src/: arena_demo.rs  barans special 0.code-profile  bubbles.rs  lib.rs  main.rs
Plugin/bargame_demos/src/bubbles/: neighbourship_tracking.rs
Plugin/bargame_demos/src/experiments/: deterministic_physics.rs  fixed_point_nalgebra_experiments.rs
Plugin/bargame_demos/src/game2/: terrain.rs  test_utils.rs
Plugin/bargame_demos/src/game2/components/: entity_id.rs  mod.rs  position.rs  terrain_collider.rs  unit.rs  world_collider.rs
Plugin/bargame_demos/src/game2/systems/: mod.rs
Plugin/bargame_demos/src/survival_game/: mod.rs
Plugin/bargame_demos/src/survival_game/structs/: mod.rs
Plugin/bargame_demos/src/survival_game/systems/: movement_system.rs
Plugin/bargame_lib/: Cargo.toml  Wrapper.cs  build.rs  example_txt_in_project_folder.txt
Plugin/bargame_lib/proto/: example.proto  example2.proto
Plugin/bargame_lib/src/: lib.rs
Plugin/bargame_lib/src/arena_fight_game/: arena_game.rs  bundles.rs  components.rs  ffi.rs  ffi_experiment.rs  game_ffi.rs  mod.rs
Plugin/bargame_lib/src/arena_fight_game/systems/: character_movement_system.rs  health_system.rs  mod.rs  player_character_input_system.rs  player_control_system.rs  player_input_system.rs  unit_attack_system.rs  unit_capture_node_system.rs  unit_cohesion_system.rs  unit_movement_system.rs  unit_spawner_system.rs
Plugin/bargame_lib/src/arena_fight_game/view_systems/: mod.rs  unit_view_system.rs
Plugin/bargame_lib/src/bubble_tanks_game/: mod.rs
Plugin/bargame_lib/src/bubble_tanks_game/components/: bubble_tank.rs  mod.rs  tank_bubble.rs
Plugin/bargame_lib/src/bubble_tanks_game/systems/: bubble_tank_system.rs  bubble_tank_system2.rs  mod.rs
Plugin/bargame_lib/src/game_core/: bevy_experiment.rs  components.rs  experiment2.rs  game_world.rs  math.rs  mod.rs  spatial_indexing.rs  spatial_indexing2.rs
Plugin/bargame_lib/src/game_core/common/: buffered_vector_interpolator.rs  id.rs  id_generator.rs  index.rs  mod.rs  random.rs  random_gen.rs
Plugin/bargame_lib/src/game_core/components/: beam.rs  circle_collider.rs  depend_on_2_entities.rs  impulse.rs  mod.rs  net_id.rs  position.rs  rigidbody.rs  velocity.rs
Plugin/bargame_lib/src/game_core/resources/: id_entity_map.rs  mod.rs  net_id_counter.rs  time.rs
Plugin/bargame_lib/src/game_core/serialization/: game_state_serializer.rs  mod.rs  serializable_world.rs
Plugin/bargame_lib/src/game_core/systems/: depend_on_rel_system.rs  id_entity_map_sync_system.rs  mod.rs  physics_system.rs
Plugin/bargame_lib/src/game_core/verlet_physics/: mod.rs  verlet_beam.rs  verlet_object.rs  verlet_physics_world.rs
Plugin/bargame_lib/src/game_core/view_components/: beam_view.rs  interpolated_position.rs  mod.rs  sphere_view.rs
Plugin/bargame_lib/src/game_core/view_resources/: interpolated_position_id.rs  mod.rs  position_interpolations.rs  view_snapshot.rs  view_snapshot_buffer.rs  view_snapshot_interpolator.rs  view_snapshots.rs  view_time.rs
Plugin/bargame_lib/src/game_core/view_resources/view_snapshots/: LineSnapshot.rs  SphereSnapshot.rs  line_snapshot.rs  mod.rs  sphere_snapshot.rs
Plugin/bargame_lib/src/game_core/view_systems/: beam_view_system.rs  line_view_system.rs  mod.rs  sphere_view_system.rs
Plugin/bargame_lib/src/protos/: example.rs  example2.rs
Plugin/bargame_lib/src/rollback_controller/: input.rs  mod.rs  rollback_controller.rs  rollback_controller_handle.rs  rollback_data.rs  serialize_experiment.rs
Plugin/bargame_lib/src/schema/: mod.rs  schema.fbs
Plugin/bargame_lib/the plan/: about the serialization system  the plan
Plugin/src/: arena_demo.rs  bubble_tests_demo.rs  bubbles.rs  draw_utils.rs  fixed_point_to_glm.rs  lib.rs  main.rs  rapier_bevy_physics_experiment.rs
Plugin/src/bubbles/: neighbourship_tracking.rs  spatial_ds.rs
Plugin/src/experiments/: mod.rs  nalgebra_experiments.rs
Plugin/src/game2/: character_systems.rs  data_types.rs  how to do the c# interface.txt  look_up_grids.rs  mod.rs  terrain.rs
Plugin/src/game2/components/: mod.rs  terrain_collider.rs  unit.rs
Plugin/src/game2/systems/: character_systems.rs
Plugin/src/game_core/: experiment.rs  ggez_experiment.rs  math.rs  mod.rs  spatial_partitioning.rs
Plugin/src/survival_game/: mod.rs
Plugin/src/survival_game/components/: mod.rs
Plugin/src/survival_game/static_world/: mod.rs  terrain.rs  tilemap.rs
Plugin/src/survival_game/systems/: mod.rs
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
