[package]
name = "bargame_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib","cdylib", "staticlib"]
name = "bargame_lib"
path = "src/lib.rs"

[dependencies]
interoptopus = "0.14.15"
interoptopus_backend_csharp = "0.14.15"
bevy_ecs = "0.8.1"
#ggrs = "0.9.2"
#quadtree_rs = "0.1.2"
nalgebra = "0.32.2"
# use simba and enable the "partial_fixed_point_support" cargo feature
simba = { version = "0.8.0", features = ["partial_fixed_point_support"] }
derive_more = "0.99.17"



serde = { version = "1.0.155", features = ["derive"] }
bincode ="1.3.3"