[package]
name = "bargame_lib"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["lib","cdylib", "staticlib"]
name = "bargame_lib"
path = "src/lib.rs"

[dependencies]
interoptopus = "0.14.15"
interoptopus_backend_csharp = "0.14.15"
fs = "0.0.5"
rand = "0.8.5" # might be incompatible with wasm

bevy_ecs = "0.10.0"
nalgebra = "0.32.2"
simba = { version = "0.8.0", features = ["partial_fixed_point_support"] }
derive_more = "0.99.17"
blake3 = "1.3.3"
serde = { version = "1.0.155", features = ["derive"] }
bincode ="1.3.3"
flatbuffers = "23.1.21"

[build-dependencies]
flatc-rust = "0.2.0"